--- a/src/bc/index.html
+++ b/src/bc/index.html
@@ -37,6 +37,11 @@
                 <button>NICKNAME</button>
             </div>
         </header>
+        
+
+        <nav class="map">
+            <img src="img/5-3.jpg" alt="">
+        </nav>
 
         <div class="welcome">
             <span><b>힙한 장소 추천</b></span>
@@ -55,6 +60,7 @@
         </div>
 
         <div class="checkbox">
+            <div class="undercheckbox">
             <div class="mycheck">
                 체크내용
             </div>
@@ -110,6 +116,7 @@
             </div>
             <button class="result3"><i class="fa-solid fa-arrow-down"></i></button>
         </div>
+    </div>
         </div>
 
 
@@ -119,6 +126,8 @@
             <button class="text">검색</button>
         </div>
         <div class="search">
+            <div class="rank">
+            </div>
             <table>
                 <tr>
                     <td><img src="img/1-2.jpg" alt=""><br><span>제주도</span></td>
@@ -163,6 +172,7 @@
                     <td><img src="img/1-5.jpg" alt=""><br><span>제주도</span></td>
                 </tr>
             </table>
+            <div class="something"></div>
         </div>
     </body>
 
